# DS-HW2

./: CMakeLists.txt  challenge.c  challenge.h  challenge_room_system_fields.h  challenge_system.c  challenge_system.h  challenge_system_test_1.c  constants.h  hw2dry.c  main.c  student.txt  system_additional_types.h  visitor_room.c  visitor_room.h
